--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/dianeselvy/advanced-js/issues"
   },
-  "homepage": "https://github.com/dianeselvy/advanced-js#readme"
+  "homepage": "https://github.com/dianeselvy/advanced-js#readme",
+  "devDependencies": {
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2"
+  }
 }
